--- a/app/src/main/res/layout/item_contractor.xml
+++ b/app/src/main/res/layout/item_contractor.xml
@@ -1,67 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zj.expressway.view.SwipeMenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:orientation="vertical">
+    android:layout_height="@dimen/fifty_dp"
+    android:clickable="true"
+    android:paddingBottom="1dp">
 
-    <RelativeLayout
-        android:id="@+id/rlItemTree"
+    <LinearLayout
+        android:id="@+id/llMain"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@null">
+        android:layout_height="@dimen/fifty_dp"
+        android:background="@drawable/touch_bg"
+        android:orientation="vertical">
 
         <RelativeLayout
-            android:id="@+id/rlNodeState"
-            android:layout_width="40dp"
-            android:layout_height="50dp"
-            android:layout_centerVertical="true"
-            android:background="@null">
-
-            <ImageView
-                android:id="@+id/imgViewState"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:layout_centerInParent="true"
-                android:background="@null"
-                android:contentDescription="@null" />
-
-            <ImageView
-                android:id="@+id/imgViewNode"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:layout_centerInParent="true"
-                android:background="@drawable/node"
-                android:contentDescription="@null"
-                android:visibility="gone" />
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/txtTitle"
+            android:id="@+id/rlItemTree"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginRight="10dp"
-            android:layout_toLeftOf="@+id/rlRight"
-            android:layout_toRightOf="@+id/rlNodeState"
-            android:gravity="left|center"
-            android:textColor="@color/black"
-            android:textSize="@dimen/fourteen_sp" />
-
-        <RelativeLayout
-            android:id="@+id/rlRight"
-            android:layout_width="40dp"
             android:layout_height="50dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="@dimen/ten_dp"
             android:background="@null">
 
-            <ImageView
-                android:id="@+id/imgViewSelect"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:layout_centerInParent="true"
-                android:background="@null"
-                android:contentDescription="@null" />
+            <RelativeLayout
+                android:id="@+id/rlNodeState"
+                android:layout_width="40dp"
+                android:layout_height="50dp"
+                android:layout_centerVertical="true"
+                android:background="@null">
+
+                <ImageView
+                    android:id="@+id/imgViewState"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_centerInParent="true"
+                    android:background="@null"
+                    android:contentDescription="@null" />
+
+                <ImageView
+                    android:id="@+id/imgViewNode"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/node"
+                    android:contentDescription="@null"
+                    android:visibility="gone" />
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/txtTitle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
+                android:layout_toLeftOf="@+id/rlRight"
+                android:layout_toRightOf="@+id/rlNodeState"
+                android:gravity="left|center"
+                android:textColor="@color/black"
+                android:textSize="@dimen/fourteen_sp" />
+
+            <RelativeLayout
+                android:id="@+id/rlRight"
+                android:layout_width="40dp"
+                android:layout_height="50dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/ten_dp"
+                android:background="@null">
+
+                <ImageView
+                    android:id="@+id/imgViewSelect"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_centerInParent="true"
+                    android:background="@null"
+                    android:contentDescription="@null" />
+            </RelativeLayout>
         </RelativeLayout>
-    </RelativeLayout>
-</LinearLayout>
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btnAddLevel"
+        android:layout_width="@dimen/fifty_dp"
+        android:layout_height="match_parent"
+        android:background="@color/colorAccent"
+        android:text="@string/add"
+        android:textColor="@color/white"
+        android:textSize="@dimen/fourteen_sp" />
+
+    <Button
+        android:id="@+id/btnDeleteLevel"
+        android:layout_width="@dimen/fifty_dp"
+        android:layout_height="match_parent"
+        android:background="@color/main_bg"
+        android:text="@string/delete"
+        android:textColor="@color/white"
+        android:textSize="@dimen/fourteen_sp" />
+</com.zj.expressway.view.SwipeMenuLayout>
