--- a/app/src/main/res/layout/layout_my_setting.xml
+++ b/app/src/main/res/layout/layout_my_setting.xml
@@ -144,14 +144,12 @@
         android:paddingLeft="@dimen/ten_dp"
         android:text="@string/sync_process_dictionary"
         android:textColor="@color/dark_grey"
-        android:textSize="@dimen/sixteen_sp"
-        android:visibility="gone" />
+        android:textSize="@dimen/sixteen_sp" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/one_dp"
-        android:background="@color/gray"
-        android:visibility="gone" />
+        android:background="@color/gray" />
 
     <Button
         android:id="@+id/btnSyncLevel"
