--- a/app/src/main/res/layout/item_local_process.xml
+++ b/app/src/main/res/layout/item_local_process.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/llTop"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="@dimen/five_dp"
-    android:layout_marginRight="@dimen/five_dp"
     android:background="@drawable/no_stroke_white_solid_bg"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/fifty_dp"
+        android:layout_height="@dimen/forty"
         android:background="@null">
 
         <ImageButton
             android:id="@+id/txtSelect"
-            android:layout_width="@dimen/fifty_dp"
-            android:layout_height="@dimen/fifty_dp"
+            android:layout_width="@dimen/forty"
+            android:layout_height="@dimen/forty"
             android:layout_centerVertical="true"
             android:background="@null"
             android:textColor="@color/black"
