--- a/app/src/main/res/layout/layout_contractor_tree.xml
+++ b/app/src/main/res/layout/layout_contractor_tree.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/contractor_list"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <include
@@ -18,6 +18,7 @@
         android:id="@+id/lvContractorList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingLeft="@dimen/ten_dp"
         android:layout_above="@+id/btnQuerySelect"
         android:layout_below="@+id/actionBar"
         android:scrollbars="none" />
