--- a/app/src/main/res/layout/layout_msg.xml
+++ b/app/src/main/res/layout/layout_msg.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EFEFEF"
     android:orientation="vertical">
 
+    <include
+        android:id="@+id/actionBar"
+        layout="@layout/navigation_bar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/zero_dp"
+        android:layout_alignParentTop="true"
+        android:visibility="gone"
+        app:layout_heightPercent="8%" />
+
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/btnAddProcess"
+        android:layout_below="@+id/actionBar"
         app:srlEnableLoadMoreWhenContentNotFull="true">
 
         <android.support.v7.widget.RecyclerView
@@ -57,6 +67,18 @@
         android:textSize="@dimen/fourteen_sp"
         android:visibility="gone" />
 
+    <Button
+        android:id="@+id/btnProcessChoice"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/forty"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/ten_dp"
+        android:background="@drawable/btn_blue"
+        android:text="@string/process_choice"
+        android:textColor="@color/white"
+        android:textSize="@dimen/fourteen_sp"
+        android:visibility="gone" />
+
     <RelativeLayout
         android:id="@+id/llSearchData"
         android:layout_width="match_parent"
@@ -95,7 +117,6 @@
                 android:text="清空条件"
                 android:textColor="@color/main_bg"
                 android:textSize="@dimen/sixteen_sp" />
-
         </LinearLayout>
     </RelativeLayout>
-</RelativeLayout>
+</com.zhy.android.percent.support.PercentRelativeLayout>
