修改列表刷新后不刷新数量问题

--- a/app/src/main/res/layout/layout_my_setting.xml
+++ b/app/src/main/res/layout/layout_my_setting.xml
@@ -79,6 +79,7 @@
         android:textSize="@dimen/sixteen_sp" />
 
     <View
+        android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="@dimen/one_dp"
         android:background="@color/gray" />
