--- a/app/src/main/res/layout/layout_app.xml
+++ b/app/src/main/res/layout/layout_app.xml
@@ -13,6 +13,7 @@
         android:orientation="horizontal">
 
         <LinearLayout
+            android:id="@+id/llToBeExamined"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -45,6 +46,7 @@
             android:background="@color/white" />
 
         <LinearLayout
+            android:id="@+id/llHaveBeenApproved"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
