--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,4 +45,11 @@
         <!--无标题 -->
         <item name="android:windowNoTitle">true</item>
     </style>
+
+    <!-- 自定义的Dialog进出动画 中间弹窗 -->
+    <style name="DialogInAndOutAnim">
+        <item name="android:windowEnterAnimation">@anim/dialog_in_anim</item>
+        <item name="android:windowExitAnimation">@anim/dialog_out_anim</item>
+    </style>
+
 </resources>
